salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Fact_Production__dll/Desktop___Fact_Production__dll.object-meta.xml
<CustomObject>
    <label>Desktop - Fact_Production</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>