salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Fact_Production__dll/fields/Production_Date_Key__c.field-meta.xml
<CustomField>
    <fullName>Production_Date_Key__c</fullName>
    <label>Production Date Key</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Production_Date_Key</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>