salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Fact_Production__dll/fields/Production_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Production_Location_ID__c</fullName>
    <label>Production Location ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Production_Location_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>