salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Fact_Production__dll/fields/ProductionID__c.field-meta.xml
<CustomField>
    <fullName>ProductionID__c</fullName>
    <label>ProductionID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ProductionID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>