salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Fact_Production__dll/fields/Units_Produced__c.field-meta.xml
<CustomField>
    <fullName>Units_Produced__c</fullName>
    <label>Units Produced</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Units_Produced</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>